Fix Hero Section BG not showing up.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,7 +140,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../static/images/stock_texas_flag_banner.jpg) top center;
+  background: url(../images/stock_texas_flag_banner.jpg) top center;
   background-size: cover;
   position: relative;
 }
